undo changes made to easy and normal cards grid as there is an issue with the layout on iOS devices, despite appearing fine on inspect

--- a/assets/style.css
+++ b/assets/style.css
@@ -151,11 +151,8 @@ h1 {
     height: min-content;
     width: min-content;
     margin: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    margin-bottom: 1rem;
+    position: relative;
     display: grid;
     column-count: 4;
     column-gap: 0;
@@ -581,12 +578,6 @@ li::marker {
     .normal-cards-grid {
         column-count: 4;
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        margin: auto;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
     }
 
     .card {
